--- a/praktikum/springboot-helloworld-main/.github/workflows/workflow.yml
+++ b/praktikum/springboot-helloworld-main/.github/workflows/workflow.yml
@@ -54,6 +54,7 @@ jobs:
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
+      - run: cd 'praktikum/springboot-helloworld-main'
       - name: Build and Push
         uses: docker/build-push-action@v2
         with:
