--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -58,6 +58,7 @@ jobs:
       - name: Build and Push
         uses: docker/build-push-action@v2
         with:
+          files: './praktikum/springboot-helloworld-main/Dockerfile'
           context: .
           push: true
           tags: tasyacitta/springboot-helloworld:latest
