--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -26,7 +26,7 @@ jobs:
           restore-keys: ${{ runner.os }}-m2
       - name: Maven Clean Verify
         run: |
-          praktikum/springboot-helloworld-main
+          'praktikum/springboot-helloworld-main'
           mvn clean verify
 
   build:
@@ -47,14 +47,14 @@ jobs:
           restore-keys: ${{ runner.os }}-m2
       - name: Run Test
         run: |
-          praktikum/springboot-helloworld-main
+          'praktikum/springboot-helloworld-main'
           mvn clean package -Dmaven.test.skip=true
       - name: Login to docker hub
         uses: docker/login-action@v1
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
-      - run: praktikum/springboot-helloworld-main
+      - run: 'praktikum/springboot-helloworld-main'
       - name: Build and Push
         uses: docker/build-push-action@v2
         with:
