--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -2,64 +2,39 @@ name: pipeline
 
 on:
   push:
-    branches: [main]
-  pull_request:
-    branches: [main]
+    branches: 
+    - main
 
   workflow_dispatch:
     
 jobs:
   run_test:
-    name: Run Test
-    runs-on: ubuntu-latest
+    name: Unit Test
+    runs-on: ubuntu-18.04
     steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-java@v2
+      - run: echo "Starting execute unit test"
+      - uses: actions/checkout@v3
+      - name: Setup JDK 11
+        uses: actions/setup-java@v3
         with:
-          distribution: temurin
-          java-version: "11"
-      - name: Cache Maven Package
-        uses: actions/cache@v1
-        with:
-          path: ~/.m2
-          key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
-          restore-keys: ${{ runner.os }}-m2
-      - name: Maven Clean Verify
-        run: |
-          'praktikum/springboot-helloworld-main'
-          mvn clean verify
+          java-version: 11
+          distribution: 'adopt'
+      - name: Maven Verify
+        run: mvn clean verify
 
   build:
-    needs: run_test
     name: Build Package
-    runs-on: ubuntu-latest 
+    runs-on: ubuntu-18.04
+    needs: run_test
+
     steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-java@v2
+      - run: echo "Starting execute unit test"
+      - uses: actions/checkout@v3
+      - name: Setup JDK 11
+        uses: actions/setup-java@v3
         with:
-          distribution: temurin
-          java-version: "11"
-      - name: Cache Maven Package
-        uses: actions/cache@v1
-        with:
-          path: ~/.m2
-          key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
-          restore-keys: ${{ runner.os }}-m2
-      - name: Run Test
-        run: |
-          'praktikum/springboot-helloworld-main'
-          mvn clean package -Dmaven.test.skip=true
-      - name: Login to docker hub
-        uses: docker/login-action@v1
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
-      - run: 'praktikum/springboot-helloworld-main'
-      - name: Build and Push
-        uses: docker/build-push-action@v2
-        with:
-          files: './praktikum/springboot-helloworld-main/dep.Dockerfile'
-          context: .
-          push: true
-          tags: tasyacitta/springboot-helloworld:latest
-  
+          java-version: 11
+          distribution: 'adopt'
+      - name: Maven Build
+        uses: mvn clean package -Dmaven.test.skip=true
+      
