--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -37,4 +37,33 @@ jobs:
           distribution: 'adopt'
       - name: Maven Build
         uses: mvn clean package -Dmaven.test.skip=true
-      
+      - name: Login to docker hub
+        uses: docker/login-action@v1
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+      - name: Build docker image
+        uses: docker/build-push-action@v2
+        with:
+          context: .
+          push: true
+          tags: tasyacitta/springboot-helloworld:latest
+
+  deployment:
+    name: Deploy Container
+    runs-on: ubuntu-latest
+    needs: builds
+    steps:
+      - name: Deploy using ssh
+        uses: appleboy/ssh-action@master
+        with:
+          host: ${{ secrets.SSH_HOST }}
+          port: 22
+          username: ${{ secrets.SSH_USERNAME }}
+          key: ${{ secrets.SSH_PRIVATE_KEY }}
+          script: |
+            docker stop springboot-helloworld:latest
+            docker rml tasyacitta/springboot-helloworld:latest
+            docker pull tasyacitta/springboot-helloworld:latest
+            docker run -d --rm --name springboot-helloworld -p 80:8080 -p 443:8080 tasyacitta/springboot-helloworld:latest
+  
