--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -47,7 +47,24 @@ jobs:
         with:
           context: .
           push: true
-          tags: ${{ secrets.DOCKERHUB_USERNAME }}/springboot-helloworld:latest
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/CICD:latest
+  deployment:
+      name: Deploy Container
+      runs-on: ubuntu-latest
+      needs: builds
+      steps:
+        - name: Deploy using ssh
+          uses: appleboy/ssh-action@master
+          with:
+            host: ${{ secrets.SSH_HOST }}
+            port: 22
+            username: ${{ secrets.SSH_USERNAME }}
+            key: ${{ secrets.SSH_PRIVATE_KEY }}
+            script: |
+              docker stop springboot-helloworld:latest
+              docker rml tasyacitta/springboot-helloworld:latest
+              docker pull tasyacitta/springboot-helloworld:latest
+              docker run -d --rm --name springboot-helloworld -p 80:8080 -p 443:8080 tasyacitta/springboot-helloworld:latest
           
 
   
