--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -51,7 +51,7 @@ jobs:
   deployment:
       name: Deploy Container
       runs-on: ubuntu-latest
-      needs: builds
+      needs: build
       steps:
         - name: Deploy using ssh
           uses: appleboy/ssh-action@master
