--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -46,7 +46,7 @@ jobs:
         with:
           context: .
           push: true
-          tags: ${{ secrets.DOCKERHUB_USERNAME }}/CICD:latest
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/cicd:latest
 
   deployment:
       name: Deploy Container
