--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -75,7 +75,8 @@ jobs:
               docker stop springboot-helloworld:latest
               docker rml tasyacitta/springboot-helloworld:latest
               docker pull tasyacitta/springboot-helloworld:latest
-              docker run -d --rm --name springboot-helloworld -p 80:8080 -p 443:8080 tasyacitta/springboot-helloworld:latest
+              docker run -d --rm --name springboot-helloworld -p 80:8080 --env-file=dev.env --network my_network tasyacitta/springboot-helloworld:latest
+             
           
 
   
