--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -75,6 +75,7 @@ jobs:
               docker stop springboot-helloworld:latest
               docker rml tasyacitta/springboot-helloworld:latest
               docker pull tasyacitta/springboot-helloworld:latest
+              docker start postgres
               docker run -d --rm --name springboot-helloworld -p 80:8080 --env-file=dev.env --network my_network tasyacitta/springboot-helloworld:latest
              
           
