--- a/dev.env
+++ b/dev.env
@@ -1,11 +1,4 @@
-server.port=8080
-spring.application.name=springboot-helloworld
-server.servlet.context-path=/api
-
-spring.datasource.url=jdbc:h2:mem:db
+spring.datasource.url=jdbc:postgresql://postgres:5432/db_name
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=password
-
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
