--- a/.dev.env
+++ b/.dev.env
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:postgresql://postgres:5432/kampus_merdeka
-spring.datasource.driverClassName=org.postgresql.Driver
-spring.datasource.username=postgres
-spring.datasource.password=SevenEightTwo782
+spring.datasource.url=jdbc:postgresql://postgres:5432/db_name
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=password
