--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -50,7 +50,7 @@ jobs:
 
   deployment:
       name: Deploy Container
-      runs-on: ubuntu-18.04
+      runs-on: ubuntu-latest
       needs: build
       steps:
         - name: echo "Starting deploy container"
