--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -53,7 +53,7 @@ jobs:
       runs-on: ubuntu-latest
       needs: build
       steps:
-        - name: echo "Starting deploy container"
+        - run: echo "Starting deploy container"
           uses: actions/checkout@v3
         - name: copy file via ssh key
           uses: appleboy/scp-action@master
