--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -54,8 +54,8 @@ jobs:
       needs: build
       steps:
         - run: echo "Starting deploy container"
-          uses: actions/checkout@v3
-        - name: copy file via ssh key
+        - uses: actions/checkout@v3
+        - name: Copy environment file via ssh
           uses: appleboy/scp-action@master
           with:
             host: ${{ secrets.SSH_HOST }}
