--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -47,37 +47,35 @@ jobs:
           context: .
           push: true
           tags: tasyacitta/springboot-helloworld:latest
-
   deployment:
-      name: Deploy Container
-      runs-on: ubuntu-latest
-      needs: build
-      steps:
-        - run: echo "Starting deploy container"
-        - uses: actions/checkout@v3
-        - name: Copy environment file via ssh
-          uses: appleboy/scp-action@master
-          with:
-            host: ${{ secrets.SSH_HOST }}
-            port: 22
-            username: ${{ secrets.SSH_USERNAME }}
-            key: ${{ secrets.SSH_SECRET_KEY }}
-            source: .dev.env
-            target: /home/${{ secrets.SSH_USERNAME }}
-        - name: Deploy using ssh
-          uses: appleboy/ssh-action@master
-          with:
-            host: ${{ secrets.SSH_HOST }}
-            port: 22
-            username: ${{ secrets.SSH_USERNAME }}
-            key: ${{ secrets.SSH_SECRET_KEY }}
-            script: |
-              docker stop springboot-helloworld
-              docker rmi tasyacitta/springboot-helloworld:latest
-              docker pull tasyacitta/springboot-helloworld:latest
-              docker start postgres
-              docker run -d --rm --name springboot-helloworld -p 80:8080 --env-file=dev.env --network my_network tasyacitta/springboot-helloworld:latest
-             
+    name: Deploy container
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - run: echo "Starting deploy container"
+      - uses: actions/checkout@v3
+      - name: Copy environment file via ssh
+        uses: appleboy/scp-action@master
+        with:
+          host: ${{ secrets.SSH_HOST }}
+          port: 22
+          username: ${{ secrets.SSH_USERNAME }}
+          key: ${{ secrets.SSH_SECRET_KEY }}
+          source: .dev.env
+          target: /home/${{ secrets.SSH_USERNAME }}
+      - name: Deploy using ssh
+        uses: appleboy/ssh-action@master
+        with:
+          host: ${{ secrets.SSH_HOST }}
+          port: 22
+          username: ${{ secrets.SSH_USERNAME }}
+          key: ${{ secrets.EC2_SSH_SECRET_KEY }}
+          script: |
+            docker stop springboot-helloworld
+            docker rmi tasyacitta/springboot-helloworld:latest
+            docker pull tasyacitta/springboot-helloworld:latest
+            docker run -d --rm --name springboot-helloworld -p 80:8080 --env-file=.dev.env --network my_network tasyacitta/springboot-helloworld:latest
+
           
 
   
